--- a/install
+++ b/install
@@ -190,7 +190,7 @@ ci_config() {
 
 ci_tests() {
 	echo 'Running tests' | maybe_boxes
-	ci && unset HPI_TESTS_SEANB
+	ci && unset HPI_TESTS_PURA
 	python3 -m pytest ./tests || return $?
 }
 
